[fit] edit member templates

--- a/templates/member/logout.html
+++ b/templates/member/logout.html
@@ -5,13 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<form action="join" method="post">
+<h3>회원 탈퇴를 위한 정보를 입력해주세요.</h3>
+<form action="out" method="post">
     id: <input type="text" name="id"><br/>
     pwd: <input type="password" name="pwd"><br/>
-    name: <input type="text" name="name"><br/>
-    pnum: <input type="text" name="pnum"><br/>
-    email: <input type="text" name="email"><br/>
-    <input type="submit" value="가입">
+    <input type="submit" value="회원 탈퇴">
 </form>
 </body>
 </html>
