--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h2>버스 노선 검색<br/></h2>
+<h2>정류장 검색<br/></h2>
 <form action="/bus/businfo" method="post">
-    버스명: <input type="text" name="busnm">
+    정류장명: <input type="text" name="strSrch">
     <input type="submit" value="검색">
 </form>
 <form action="/bus/stationlistinfo" method="post">
