--- a/templates/member/edit.html
+++ b/templates/member/edit.html
@@ -10,6 +10,7 @@
     id: <input type="text" name="id" value="{{m.id}}" readonly><br/>
     pwd: <input type="password" name="pwd" value="{{m.pwd}}"><br/>
     name: <input type="text" name="name" value="{{m.name}}"><br/>
+    pnum: <input type="text" name="pnum" value="{{m.pnum}}"><br/>
     email: <input type="text" name="email" value="{{m.email}}"><br/>
     <input type="submit" value="가입">
 </form>
