--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
     <a href="/member/logout">로그아웃</a><br/>
     <a href="/member/myinfo">내정보확인</a><br/>
     <a href="/member/out">탈퇴</a><br/>
+    <a href="/reserve/reserveinfo/{{id}}">예약 확인</a><br/>
 {% else %}
     <a href="/member/login">로그인</a>
     <a href="/member/join">회원가입</a>
