--- a/templates/member/edit.html
+++ b/templates/member/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>내 정보 보기</h3>
-<form action="join" method="post">
+<form action="/member/myinfo" method="post">
     id: <input type="text" name="id" value="{{m.id}}" readonly><br/>
     pwd: <input type="password" name="pwd" value="{{m.pwd}}"><br/>
     name: <input type="text" name="name" value="{{m.name}}"><br/>
