--- a/templates/member/logout.html
+++ b/templates/member/logout.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>회원 탈퇴를 위한 정보를 입력해주세요.</h3>
-<form action="out" method="post">
+<form action="/member/out" method="post">
     id: <input type="text" name="id"><br/>
     pwd: <input type="password" name="pwd"><br/>
     <input type="submit" value="회원 탈퇴">
