--- a/templates/member/join.html
+++ b/templates/member/join.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="join" method="post">
+<form action="/member/join" method="post">
     id: <input type="text" name="id"><br/>
     pwd: <input type="password" name="pwd"><br/>
     name: <input type="text" name="name"><br/>
