--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="{{ url_for('static', filename='./css/index.css') }}" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
-<h2>버스 노선 검색<br/></h2>
+<h2><span class="\-">버스 노선 검색</span><br/></h2>
 <form action="/bus/businfo" method="post">
-    정류장명: <input type="text" name="strSrch">
+    <span class="\-">
+        정류장명: </span><input type="text" name="strSrch">
     <input type="submit" value="검색">
 </form>
 <form action="/bus/stationlistinfo" method="post">
     정류장번호: <input type="text" name="arsid">
     <input type="submit" value="검색">
 </form><br/>
+
 {% if session['flag'] %}
     <a href="/member/logout">로그아웃</a><br/>
     <a href="/member/myinfo">정보수정</a><br/>
@@ -23,5 +26,121 @@
     <a href="/member/login">로그인</a>
     <a href="/member/join">회원가입</a>
 {% endif %}
+
+
+<table border="1">
+    <tr><th>정류장고유번호1</th>
+        <th>정류장고유번호2</th>
+        <th>정류장이름</th>
+        <th>도달거리</th>
+        <th>x좌표</th>
+        <th>y좌표</th>
+{% for s in res %}
+<tr>
+    <td>{{s.arsId}}</td>
+    <td>{{s.stationId}}</td>
+    <td>{{s.stationNm}}</td>
+    <td>{{s.dist}}</td>
+    <td>{{s.gpsX}}</td>
+    <td>{{s.gpsY}}</td>
+</tr>
+{% endfor %}
+
+    </table>
+
+
+    <div class="Background-2"  id="map" style="width:87.063rem;height:67.5rem;" align="right">
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e10528cfa7d6fc2b00cfbc84f4b6a7bb"></script>
+	<script>
+		var container = document.getElementById('map');
+
+		var options = {
+			center: new kakao.maps.LatLng(37.51936, 126.8973568),//LatLng(, ), // // // 지도 중심 좌표
+			level: 2 //지도 확대 레벨
+		};
+
+		var map = new kakao.maps.Map(container, options); // 지도 생성
+
+
+        // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
+        var mapTypeControl = new kakao.maps.MapTypeControl();
+
+        // 지도에 컨트롤을 추가해야 지도위에 표시됩니다
+        // kakao.maps.ControlPosition은 컨트롤이 표시될 위치를 정의하는데 TOPRIGHT는 오른쪽 위를 의미합니다
+        map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
+
+        // 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+        var zoomControl = new kakao.maps.ZoomControl();
+        map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
+            // 마커 이미지의 이미지 크기 입니다
+        var imageSize = new kakao.maps.Size(42, 48);
+
+        var imageSrc = "https://cdn-icons-png.flaticon.com/512/927/927693.png";
+        // 마커 이미지를 생성합니다
+        var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+
+        if (navigator.geolocation) {
+
+            // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+            navigator.geolocation.getCurrentPosition(function(position) {
+
+                var lat = position.coords.latitude, // 위도
+                    lon = position.coords.longitude; // 경도
+
+                var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+                    message = '<div style="padding:5px;">내위치</div>'; // 인포윈도우에 표시될 내용입니다
+                console.log(lat, lon)
+                // 마커와 인포윈도우를 표시합니다
+                displayMarker(locPosition, message);
+                return {lat, lon}
+              });
+
+        } else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
+
+            var locPosition = new kakao.maps.LatLng(33.450701, 126.570667),
+                message = 'geolocation을 사용할수 없어요..'
+
+            displayMarker(locPosition, message);
+        }
+
+        // 지도에 마커와 인포윈도우를 표시하는 함수입니다
+        function displayMarker(locPosition, message) {
+
+            // 마커를 생성합니다
+            var marker = new kakao.maps.Marker({
+                map: map,
+                position: locPosition,
+                image : markerImage //마커이미지
+            });
+
+            var iwContent = message, // 인포윈도우에 표시할 내용
+                iwRemoveable = true;
+
+            // 인포윈도우를 생성합니다
+            var infowindow = new kakao.maps.InfoWindow({
+                content : iwContent,
+                removable : iwRemoveable
+            });
+
+            // 인포윈도우를 마커위에 표시합니다
+            infowindow.open(map, marker);
+
+            // 지도 중심좌표를 접속위치로 변경합니다
+            map.setCenter(locPosition);
+        }
+        // 마커가 표시될 위치입니다
+        var markerPosition  = new kakao.maps.LatLng(37.5186715447, 126.8975520554);
+
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+            position: markerPosition
+        });
+
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker.setMap(map);
+
+	</script>
+        </div>
 </body>
 </html>
