[fit] add checkmyreservation

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 {% if session['flag'] %}
     <a href="/member/logout">로그아웃</a><br/>
     <a href="/member/myinfo">정보수정</a><br/>
-    <a href="/reserve/reserveinfo">예약확인</a><br/>
+    <a href="/reserve/reserveinfo">예약 현황 확인</a><br/>
     <a href="/member/out">탈퇴</a><br/>
 {% else %}
     <a href="/member/login">로그인</a>
