--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <link href="{{ url_for('static', filename='./css/index.css') }}" rel="stylesheet">
     <title>Title</title>
+    <style>
+        .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
+        .wrap * {padding: 0;margin: 0;}
+        .wrap .info {width: 286px;height: 120px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
+        .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
+        .info .title {padding: 5px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
+        .info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
+        .info .close:hover {cursor: pointer;}
+        .info .body {position: relative;overflow: hidden;}
+        .info .desc {position: relative;margin: 13px 0 0 90px;height: 75px;}
+        .desc .ellipsis {overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+        .desc .jibun {font-size: 11px;color: #888;margin-top: -2px;}
+        .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
+        .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
+        .info .link {color: #5085BB;}
+        .customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
+        .customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
+        .customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #d95050;background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
+        .customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:14px;font-weight:bold;}
+        .customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
+    </style>
 </head>
 <body>
 <h2><span class="\-">버스 노선 검색</span><br/></h2>
@@ -27,28 +48,7 @@
     <a href="/member/join">회원가입</a>
 {% endif %}
 
-
-<table border="1">
-    <tr><th>정류장고유번호1</th>
-        <th>정류장고유번호2</th>
-        <th>정류장이름</th>
-        <th>도달거리</th>
-        <th>x좌표</th>
-        <th>y좌표</th>
-{% for s in res %}
-<tr>
-    <td>{{s.arsId}}</td>
-    <td>{{s.stationId}}</td>
-    <td>{{s.stationNm}}</td>
-    <td>{{s.dist}}</td>
-    <td>{{s.gpsX}}</td>
-    <td>{{s.gpsY}}</td>
-</tr>
-{% endfor %}
-
     </table>
-
-
     <div class="Background-2"  id="map" style="width:87.063rem;height:67.5rem;" align="right">
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e10528cfa7d6fc2b00cfbc84f4b6a7bb"></script>
 	<script>
@@ -74,9 +74,9 @@
         map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 
             // 마커 이미지의 이미지 크기 입니다
-        var imageSize = new kakao.maps.Size(42, 48);
+        var imageSize = new kakao.maps.Size(48, 48);
 
-        var imageSrc = "https://cdn-icons-png.flaticon.com/512/927/927693.png";
+        var imageSrc = "https://cdn-icons-png.flaticon.com/512/8253/8253212.png";
         // 마커 이미지를 생성합니다
         var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
 
@@ -90,10 +90,8 @@
 
                 var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
                     message = '<div style="padding:5px;">내위치</div>'; // 인포윈도우에 표시될 내용입니다
-                console.log(lat, lon)
                 // 마커와 인포윈도우를 표시합니다
                 displayMarker(locPosition, message);
-                return {lat, lon}
               });
 
         } else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
@@ -108,10 +106,9 @@
         function displayMarker(locPosition, message) {
 
             // 마커를 생성합니다
-            var marker = new kakao.maps.Marker({
+            var Mymarker = new kakao.maps.Marker({
                 map: map,
-                position: locPosition,
-                image : markerImage //마커이미지
+                position: locPosition
             });
 
             var iwContent = message, // 인포윈도우에 표시할 내용
@@ -124,23 +121,65 @@
             });
 
             // 인포윈도우를 마커위에 표시합니다
-            infowindow.open(map, marker);
+            infowindow.open(map, Mymarker);
 
             // 지도 중심좌표를 접속위치로 변경합니다
             map.setCenter(locPosition);
         }
-        // 마커가 표시될 위치입니다
-        var markerPosition  = new kakao.maps.LatLng(37.5186715447, 126.8975520554);
-
-        // 마커를 생성합니다
-        var marker = new kakao.maps.Marker({
-            position: markerPosition
-        });
-
-        // 마커가 지도 위에 표시되도록 설정합니다
-        marker.setMap(map);
-
+    var positions = []
 	</script>
+    {% for s in res %}
+        <script>
+            positions.push(
+                {
+                    content: '<div class="close" onclick="closeOverlay()" title="닫기"><a href="/bus/stationinfo/{{s.arsId}}" target="_blank">{{s.stationNm}}</a></div>',
+                    latlng: new kakao.maps.LatLng({{s.gpsY}}, {{s.gpsX}})
+                }
+            );
+        </script>
+    {% endfor %}
+    <script>
+            // 마커 이미지의 이미지 주소입니다
+            var imageSrc = 'https://cdn-icons-png.flaticon.com/512/7902/7902160.png', // 마커이미지의 주소입니다
+            imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
+            imageOption = {offset: new kakao.maps.Point(27, 69)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+
+            // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+            var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption)
+
+            for (var i = 0; i < positions.length; i ++) {
+                // 마커를 생성합니다
+                var marker = new kakao.maps.Marker({
+                    map: map, // 마커를 표시할 지도
+                    position: positions[i].latlng, // 마커의 위치
+                    image : markerImage
+                });
+
+                // 마커에 표시할 인포윈도우를 생성합니다
+                var infowindow = new kakao.maps.InfoWindow({
+                    content: positions[i].content // 인포윈도우에 표시할 내용
+                });
+
+                // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록합니다
+                // 이벤트 리스너로는 클로저를 만들어 등록합니다
+                // for문에서 클로저를 만들어 주지 않으면 마지막 마커에만 이벤트가 등록됩니다
+                kakao.maps.event.addListener(marker, 'click', makeOverListener(map, marker, infowindow));
+
+            }
+
+            // 인포윈도우를 표시하는 클로저를 만드는 함수입니다
+            function makeOverListener(map, marker, infowindow) {
+                return function() {
+                    infowindow.open(map, marker);
+                };
+            }
+            // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다
+            function closeOverlay() {
+                overlay.setMap(null);
+            }
+
+            
+        </script>
         </div>
 </body>
 </html>
