[fit] mid check

--- a/templates/bus/reservation.html
+++ b/templates/bus/reservation.html
@@ -38,7 +38,7 @@
     </tr>
 {#    {% for i in res %}#}
 {#        <tr>#}
-{#            <td>{{i.reservenum}}</td><td>{{i.resdate}}</td><td>{{i.rtNm}}</td><td>{{i.plainNo}}</td>#}
+{#            <td>{{i.resNum}}</td><td>{{i.resdate}}</td><td>{{i.rtNm}}</td><td>{{i.plainNo}}</td>#}
 {#            <td>{{i.stNm}}</td><td>{{i.stNmD}}</td><td>{{i.reserve}}</td><td>{{i.etc}}</td>#}
 {#        </tr>#}
 {#    {% endfor %}#}
